--- a/course/hu/pamphlets/b383cf6baddbfc72fdf8b0ed533a518e2872d531.tex
+++ b/course/hu/pamphlets/b383cf6baddbfc72fdf8b0ed533a518e2872d531.tex
@@ -16,7 +16,6 @@
 \usepackage{fancyhdr}
 \usepackage{tcolorbox}
 \usepackage{listings}
-\usepackage{roboto}
 \usepackage[scaled=0.9]{roboto-mono}
 
 % GEOMETRY - Match the MkDocs content width
@@ -88,7 +87,7 @@
 % HEADER/FOOTER - Clean professional look
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{\small\color{textcolor}\VAR{title}}
+\fancyhead[L]{\small\color{textcolor}Az MI Fluencia Keretrendszer}
 \fancyhead[R]{\small\color{textcolor}Az MI Fluencia Keretrendszer}
 \fancyfoot[C]{\small\color{textcolor}\thepage}
 \renewcommand{\headrulewidth}{0.5pt}
@@ -109,7 +108,6 @@
 % BLOCKQUOTE STYLING - Match MkDocs enhanced blockquotes
 \newenvironment{customquote}
   {\begin{tcolorbox}[
-    enhanced,
     left=4mm,
     right=4mm,
     top=4mm,
@@ -153,12 +151,54 @@
 \begin{document}
 
 % --- TITLE ---
-\title{\VAR{title}}
-\author{\VAR{author}}
-\date{\VAR{date}}
+\title{Az MI Fluencia Keretrendszer}
+\author{Rick Dakan, Joseph Feller és Anthropic}
+\date{2025}
 \maketitle
 
 % --- CONTENT ---
-\VAR{content}
+
+\begin{customquote}
+Négy egymással összefüggő kompetencia, amelyek biztosítják, hogy az MI-vel való interakcióink hatékonyak, eredményesek, etikusak és biztonságosak legyenek.
+\end{customquote}
+
+\section{A 4D keretrendszer}
+
+\subsection{Delegálás}
+Célok kitűzése és annak eldöntése, hogy mikor és hogyan vonjuk be az MI-t.
+
+\subsection{Leírás}
+A célok hatékony leírása a hasznos MI viselkedések és kimenetek előidézéséhez.
+
+\subsection{Megkülönböztetés}
+Az MI kimeneteinek és viselkedésének hasznosságának pontos felmérése.
+
+\subsection{Gondosság}
+Felelősségvállalás azért, amit az MI-vel teszünk és ahogyan tesszük.
+
+\section{Kulcsfogalmak}
+
+\begin{customquote}
+Az MI Fluencia azt jelenti, hogy az MI rendszerekkel olyan módon lépünk kapcsolatba, amely hatékony, eredményes, etikus és biztonságos.
+
+A delegálás, leírás, megkülönböztetés és gondosság kompetenciák egymással összefüggő készségek, ismeretek, belátások, értékek gyűjteményei.
+\end{customquote}
+
+\section{Az MI interakció három módja}
+
+\subsection{Automatizálás}
+Az MI konkrét feladatokat hajt végre emberi utasítások alapján.
+
+\subsection{Bővítés}
+Az emberek és az MI gondolkodó partnerként működnek együtt a feladatok elvégzésében.
+
+\subsection{Ügynökség}
+Az emberek úgy konfigurálják az MI-t, hogy önállóan végezzen jövőbeli feladatokat a nevükben.
+
+\vfill
+\begin{center}
+\small
+Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.
+\end{center}
 
 \end{document}
