--- a/course/hu/pamphlets/d8ba4eda6eed65f193be549d49385006de8b7119.tex
+++ b/course/hu/pamphlets/d8ba4eda6eed65f193be549d49385006de8b7119.tex
@@ -16,7 +16,6 @@
 \usepackage{fancyhdr}
 \usepackage{tcolorbox}
 \usepackage{listings}
-\usepackage{roboto}
 \usepackage[scaled=0.9]{roboto-mono}
 
 % GEOMETRY - Match the MkDocs content width
@@ -88,8 +87,8 @@
 % HEADER/FOOTER - Clean professional look
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{\small\color{textcolor}\VAR{title}}
-\fancyhead[R]{\small\color{textcolor}Az MI Fluencia Keretrendszer}
+\fancyhead[L]{\small\color{textcolor}A 4D-k: Megkülönböztetés}
+\fancyhead[R]{\small\color{textcolor}ANTHROPIC}
 \fancyfoot[C]{\small\color{textcolor}\thepage}
 \renewcommand{\headrulewidth}{0.5pt}
 \renewcommand{\footrulewidth}{0pt}
@@ -109,7 +108,6 @@
 % BLOCKQUOTE STYLING - Match MkDocs enhanced blockquotes
 \newenvironment{customquote}
   {\begin{tcolorbox}[
-    enhanced,
     left=4mm,
     right=4mm,
     top=4mm,
@@ -153,12 +151,78 @@
 \begin{document}
 
 % --- TITLE ---
-\title{\VAR{title}}
-\author{\VAR{author}}
-\date{\VAR{date}}
+\title{A 4D-k: Megkülönböztetés}
+\author{Rick Dakan, Joseph Feller és Anthropic}
+\date{2025}
 \maketitle
 
 % --- CONTENT ---
-\VAR{content}
+
+\begin{customquote}
+A megkülönböztetés az a képesség, hogy átgondoltan és kritikusan értékeljük, mit az MI termel, hogyan termeli, és hogyan viselkedik.
+\end{customquote}
+
+\section{A Megkülönböztetés Három Típusa}
+
+\subsection{Termék megkülönböztetés}
+Annak értékelése, hogy az MI mit termel:
+\begin{itemize}
+\item \textbf{Pontosság:} A kimenet tényszerűen helyes-e?
+\item \textbf{Megfelelőség:} A kimenet megfelel-e a kérésnek?
+\item \textbf{Koherencia:} A kimenet logikusan összhangban van-e?
+\item \textbf{Relevancia:} A kimenet releváns-e a kontextusban?
+\end{itemize}
+
+\subsection{Folyamat megkülönböztetés}
+Annak értékelése, hogyan jutott az MI a kimenetéhez:
+\begin{itemize}
+\item Logikai hibák keresése az érvelésben
+\item Figyelmetlenségek azonosítása a folyamatban
+\item Nem megfelelő érvelési lépések felderítése
+\item Az MI gondolkodásmenetének követése
+\end{itemize}
+
+\subsection{Teljesítmény megkülönböztetés}
+Annak értékelése, hogyan viselkedik az MI az interakció során:
+\begin{itemize}
+\item A kommunikációs stílus hatékonysága
+\item Az MI válaszkészsége és együttműködése
+\item A megadott utasítások követése
+\item Az igényekhez való alkalmazkodás
+\end{itemize}
+
+\section{A Leírás-Megkülönböztetés Hurok}
+
+\begin{customquote}
+A megkülönböztetés kéz a kézben működik a leírással egy folyamatos visszacsatolási hurokban.
+\end{customquote}
+
+Ez a hurok a következőképpen működik:
+
+\begin{enumerate}
+\item \textbf{Leírás:} Egyértelmű utasítások és elvárások meghatározása
+\item \textbf{MI kimenet:} Az MI válaszol a kérésre
+\item \textbf{Megkülönböztetés:} A kimenet kritikus értékelése
+\item \textbf{Finomítás:} A leírás javítása a megkülönböztetés alapján
+\item \textbf{Iteráció:} A folyamat ismétlése a jobb eredményekért
+\end{enumerate}
+
+\section{Gyakorlati Alkalmazás}
+
+A hatékony megkülönböztetés érdekében:
+
+\begin{itemize}
+\item \textbf{Légy kritikus:} Ne fogadd el vakon az MI kimeneteit
+\item \textbf{Ellenőrizz:} Győződj meg a tények pontosságáról
+\item \textbf{Értékeld a logikát:} Kövesd végig az MI érvelését
+\item \textbf{Figyeld a mintákat:} Tanulj az MI viselkedéséből
+\item \textbf{Adj visszajelzést:} Használd a megkülönböztetést a jobb leírásokhoz
+\end{itemize}
+
+\vfill
+\begin{center}
+\small
+Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.
+\end{center}
 
 \end{document}
