docs: remove duplicate download links for 16:9 summaries

--- a/course/hu/pamphlets/4d-delegacio.tex
+++ b/course/hu/pamphlets/4d-delegacio.tex
@@ -158,7 +158,7 @@
 \maketitle
 
 % --- CONTENT ---
-\section*{A delegálás átgondolt döntések meghozatala arról, hogy melyik munka megfelelő az Ön számára, melyiket végezze az MI, vagy melyiket végezzék együtt, és hogyan osszák el ezeket a feladatokat.}
+\section*{A delegálás átgondolt döntések meghozatala arról, hogy melyik munka megfelelő számodra, melyiket végezze az MI, vagy melyiket végezzetek együtt, és hogyan osszátok el ezeket a feladatokat.}
 \textit{Mit próbálok csinálni? Mit csinálsz jól? Oké, itt a terv}
 
 \begin{center}
