--- a/course/hu/pamphlets/4d-megkulonboztetes.tex
+++ b/course/hu/pamphlets/4d-megkulonboztetes.tex
@@ -170,7 +170,7 @@
 \begin{itemize}
     \item \textbf{Termék megkülönböztetés:} Annak értékelése, hogy mit az MI termel (pontosság, megfelelőség, koherencia, relevancia).
     \item \textbf{Folyamat megkülönböztetés:} Annak értékelése, hogyan jutott az MI a kimenetéhez, logikai hibákat, figyelmetlenségeket vagy nem megfelelő érvelési lépéseket keresve.
-    \item \textbf{Teljesítmény megkülönböztetés:} Annak értékelése, hogyan viselkedik az MI az interakció során, figyelembe véve, hogy kommunikációs stílusa hatékony-e az Ön igényeinek.
+    \item \textbf{Teljesítmény megkülönböztetés:} Annak értékelése, hogyan viselkedik az MI az interakció során, figyelembe véve, hogy kommunikációs stílusa hatékony-e az igényeidnek.
 \end{itemize}
 
 \textit{A megkülönböztetés kéz a kézben működik a leírással egy folyamatos visszacsatolási hurokban.}
