--- a/course/hu/pamphlets/6-technika-hatekony-prompttervezes.tex
+++ b/course/hu/pamphlets/6-technika-hatekony-prompttervezes.tex
@@ -191,8 +191,8 @@
 \textit{Ha teret ad az MI-nek a gondolkodásra a válaszadás előtt, az ösztönzi a mélyebb, átfogóbb válaszokat.}
 
 \section*{6. Határozza meg az MI szerepét}
-\textit{Kérem, magyarázza el, hogyan alakulnak ki a szivárványok egy tapasztalt természettudomány-tanár szemszögéből, aki egy okos, 10 éves gyereknek beszél, akit érdekel a tudomány.}
-\textit{Az MI szerepének, hangnemének vagy stílusának meghatározása segít formálni a megközelítését, hogy illeszkedjen az Ön specifikus igényeihez és közönségéhez.}
+\textit{Kérem, magyarázd el, hogyan alakulnak ki a szivárványok egy tapasztalt természettudomány-tanár szemszögéből, aki egy okos, 10 éves gyereknek beszél, akit érdekel a tudomány.}
+\textit{Az MI szerepének, hangnemének vagy stílusának meghatározása segít formálni a megközelítését, hogy illeszkedjen a specifikus igényeidhez és közönségedhez.}
 
 \section*{Titkos fegyver: Kérjen segítséget az MI-től a promptoláshoz}
 \textit{Megpróbálom rávenni Önt, Claude, hogy segítsen nekem [cél]. Nem vagyok benne biztos, hogyan fogalmazzam meg a kérésemet, hogy a legjobb eredményt kapjam. Segítene nekem egy hatékony promptot készíteni ehhez?}
