docs: update Hungarian AI Fluency course pamphlets

--- a/course/hu/pamphlets/4d-leiras.tex
+++ b/course/hu/pamphlets/4d-leiras.tex
@@ -169,8 +169,8 @@
 \end{center}
 
 \begin{itemize}
-    \item \textbf{Termékleírás:} Annak meghatározása, hogy mit szeretne a kimenetek, a formátum, a közönség, és a stílus tekintetében.
-    \item \textbf{Folyamatleírás:} Annak meghatározása, hogy az MI hogyan közelítse meg a kérését, például lépésről lépésre történő utasítások megadásával az MI számára.
+    \item \textbf{Termékleírás:} Annak meghatározása, hogy mit szeretnél a kimenetek, a formátum, a közönség, és a stílus tekintetében.
+    \item \textbf{Folyamatleírás:} Annak meghatározása, hogy az MI hogyan közelítse meg a kérésedet, például lépésről lépésre történő utasítások megadásával az MI számára.
     \item \textbf{Teljesítményleírás:} Az MI rendszer viselkedésének meghatározása az együttműködés során, például hogy tömör vagy részletes, kihívó vagy támogató legyen.
 \end{itemize}
 
