--- a/course/hu/pamphlets/6-technika-hatekony-prompttervezes.tex
+++ b/course/hu/pamphlets/6-technika-hatekony-prompttervezes.tex
@@ -158,45 +158,45 @@
 \maketitle
 
 % --- CONTENT ---
-\section*{1. Adjon kontextust}
+\section*{1. Adj kontextust}
 \begin{tabular}{p{0.45\textwidth} p{0.45\textwidth}}
 \textbf{Előtte} & \textbf{Utána} \\
-\parbox[t]{0.45\textwidth}{Mesélj a klímaváltozásról.} & \parbox[t]{0.45\textwidth}{Magyarázza el a klímaváltozás három fő hatását a mezőgazdaságra a trópusi régiókban, az elmúlt évtizedből vett példákkal.} \\
+\parbox[t]{0.45\textwidth}{Mesélj a klímaváltozásról.} & \parbox[t]{0.45\textwidth}{Magyarázd el a klímaváltozás három fő hatását a mezőgazdaságra a trópusi régiókban, az elmúlt évtizedből vett példákkal.} \\
 \end{tabular}
-\textit{Legyen konkrét abban, amit szeretne, adjon meg részleteket a hatókörről, a földrajzi területről, az időkeretről és más releváns paraméterekről.}
+\textit{Legyél konkrét abban, amit szeretnél, adj meg részleteket a hatókörről, a földrajzi területről, az időkeretről és más releváns paraméterekről.}
 
-\section*{2. Mutasson példákat arra, hogy mi a "jó"}
+\section*{2. Mutass példákat arra, hogy mi a "jó"}
 \begin{tabular}{p{0.45\textwidth} p{0.45\textwidth}}
 \textbf{Előtte} & \textbf{Utána} \\
-\parbox[t]{0.45\textwidth}{Kérem, alakítsa át ezt a technikai kijelentést közérthetővé: "A platform végponttól végpontig terjedő titkosítási protokollokat alkalmaz az adatintegritás védelme érdekében."} & \parbox[t]{0.45\textwidth}{Itt van két példa arra, hogyan lehet a technikai zsargont közérthető nyelvre átalakítani: \newline 1. "A kvantumalgoritmus kvadratikus gyorsulást mutat." - "Az új módszer nagyjából kétszer olyan gyorsan oldja meg a problémákat, mint a korábbi módszerek." \newline 2. "A felület intuitív tervezési paradigmákat használ." - "A design könnyen érthető és használható." \newline Most kérem, alakítsa át ezt a technikai kijelentést közérthető nyelvre: "A platform végponttól végpontig terjedő titkosítási protokollokat alkalmaz az adatintegritás védelme érdekében."} \\
+\parbox[t]{0.45\textwidth}{Kérlek, alakítsd át ezt a technikai kijelentést közérthetővé: "A platform végponttól végpontig terjedő titkosítási protokollokat alkalmaz az adatintegritás védelme érdekében."} & \parbox[t]{0.45\textwidth}{Itt van két példa arra, hogyan lehet a technikai zsargont közérthető nyelvre átalakítani: \newline 1. "A kvantumalgoritmus kvadratikus gyorsulást mutat." - "Az új módszer nagyjából kétszer olyan gyorsan oldja meg a problémákat, mint a korábbi módszerek." \newline 2. "A felület intuitív tervezési paradigmákat használ." - "A design könnyen érthető és használható." \newline Most kérlek, alakítsa át ezt a technikai kijelentést közérthető nyelvre: "A platform végponttól végpontig terjedő titkosítási protokollokat alkalmaz az adatintegritás védelme érdekében."} \\
 \end{tabular}
 \textit{A példák bemutatása segít az MI-nek megérteni a mintát, stílust vagy formátumot, amit keres, sokkal világosabban, mint a leírások önmagukban.}
 
-\section*{3. Adjon meg kimeneti korlátokat}
+\section*{3. Adj meg kimeneti korlátokat}
 \begin{tabular}{p{0.45\textwidth} p{0.45\textwidth}}
 \textbf{Előtte} & \textbf{Utána} \\
-\parbox[t]{0.45\textwidth}{Tervezzen nekem egy személyes művészeti portfólió weboldalt.} & \parbox[t]{0.45\textwidth}{Hozzon létre egy letisztult, modern, egyoldalas portfólió weboldalt ezekkel a szakaszokkal: Hős, Rólam, Készségek, Portfólió/Projektek, Tapasztalat és Kapcsolat. Tegye a navigációs menüt ragadóssá és reszponzívvá, hamburger menüvel mobilon. Használjon naplemente színpalettát és adjon hozzá egy sötét/világos mód kapcsolót.} \\
+\parbox[t]{0.45\textwidth}{Tervezz nekem egy személyes művészeti portfólió weboldalt.} & \parbox[t]{0.45\textwidth}{Hozz létre egy letisztult, modern, egyoldalas portfólió weboldalt ezekkel a szakaszokkal: Hős, Rólam, Készségek, Portfólió/Projektek, Tapasztalat és Kapcsolat. Tedd a navigációs menüt ragadóssá és reszponzívvá, hamburger menüvel mobilon. Használj naplemente színpalettát és adj hozzá egy sötét/világos mód kapcsolót.} \\
 \end{tabular}
-\textit{Legyen konkrét abban, amit szeretne, adjon meg részleteket a hatókörről, a földrajzi területről, az időkeretről és más releváns paraméterekről.}
+\textit{Legyél konkrét abban, amit szeretnél, adj meg részleteket a hatókörről, a földrajzi területről, az időkeretről és más releváns paraméterekről.}
 
-\section*{4. Bontsa a komplex feladatokat lépésekre}
+\section*{4. Bontsd a komplex feladatokat lépésekre}
 \begin{tabular}{p{0.45\textwidth} p{0.45\textwidth}}
 \textbf{Előtte} & \textbf{Utána} \\
-\parbox[t]{0.45\textwidth}{Elemezze ezt a negyedéves értékesítési adatot.} & \parbox[t]{0.45\textwidth}{Szeretném elemezni ezt a negyedéves értékesítési adatot. Kérem, közelítse meg ezt a következőképpen: \newline 1. A legjobban teljesítő termékek azonosítása \newline 2. A jelenlegi negyedév összehasonlítása az előző negyedévvel \newline 3. A szokatlan minták vagy trendek kiemelése \newline 4. Lehetséges okok javaslata ezekre a trendekre} \\
+\parbox[t]{0.45\textwidth}{Elemezd ezt a negyedéves értékesítési adatot.} & \parbox[t]{0.45\textwidth}{Szeretném elemezni ezt a negyedéves értékesítési adatot. Kérem, közelítsd meg ezt a következőképpen: \newline 1. A legjobban teljesítő termékek azonosítása \newline 2. A jelenlegi negyedév összehasonlítása az előző negyedévvel \newline 3. A szokatlan minták vagy trendek kiemelése \newline 4. Lehetséges okok javaslata ezekre a trendekre} \\
 \end{tabular}
 \textit{A komplex feladatok világos lépésekre bontása irányítja az MI érvelési folyamatát és alapos, módszeres válaszokat biztosít.}
 
-\section*{5. Kérje meg, hogy először gondolkodjon}
-\textit{Válaszadás előtt kérem, gondolja át alaposan ezt a problémát. Vegye figyelembe a különböző tényezőket, a lehetséges korlátokat és a különböző megközelítéseket, mielőtt a legjobb megoldást javasolná.}
+\section*{5. Kérd meg, hogy először gondolkodj}
+\textit{Válaszadás előtt kérlek, gondold át alaposan ezt a problémát. Vedd figyelembe a különböző tényezőket, a lehetséges korlátokat és a különböző megközelítéseket, mielőtt a legjobb megoldást javasolnád.}
 \textit{Ha teret ad az MI-nek a gondolkodásra a válaszadás előtt, az ösztönzi a mélyebb, átfogóbb válaszokat.}
 
-\section*{6. Határozza meg az MI szerepét}
+\section*{6. Határozd meg az MI szerepét}
 \textit{Kérem, magyarázd el, hogyan alakulnak ki a szivárványok egy tapasztalt természettudomány-tanár szemszögéből, aki egy okos, 10 éves gyereknek beszél, akit érdekel a tudomány.}
 \textit{Az MI szerepének, hangnemének vagy stílusának meghatározása segít formálni a megközelítését, hogy illeszkedjen a specifikus igényeidhez és közönségedhez.}
 
-\section*{Titkos fegyver: Kérjen segítséget az MI-től a promptoláshoz}
-\textit{Megpróbálom rávenni Önt, Claude, hogy segítsen nekem [cél]. Nem vagyok benne biztos, hogyan fogalmazzam meg a kérésemet, hogy a legjobb eredményt kapjam. Segítene nekem egy hatékony promptot készíteni ehhez?}
-\textit{Ha nem biztos benne, hogyan kérjen valamit, az MI segíthet javítani a promptján. Ez talán a leghatékonyabb technika mind közül!}
+\section*{Titkos fegyver: Kérj segítséget az MI-től a promptoláshoz}
+\textit{Megpróbállak rávenni téged, Claude, hogy segíts nekem [cél]. Nem vagyok benne biztos, hogyan fogalmazzam meg a kérésemet, hogy a legjobb eredményt kapjam. Segítenél nekem egy hatékony promptot készíteni ehhez?}
+\textit{Ha nem vagy biztos benne, hogyan kérj valamit, az MI segíthet javítani a promptodon. Ez talán a leghatékonyabb technika mind közül!}
 
 \vspace{\fill}
 \begin{center}
