--- a/course/hu/pamphlets/generativ-mi-megertese.tex
+++ b/course/hu/pamphlets/generativ-mi-megertese.tex
@@ -164,7 +164,7 @@ A generatív MI olyan mesterséges intelligencia rendszereket jelent, amelyek ú
 \subsection*{Hagyományos MI vs. Generatív MI}
 \begin{tabular}{ll}
 \textbf{Hagyományos MI} & \textbf{Generatív MI} \\
-E-maileket spamként vagy nem spamként osztályoz & Teljesen új e-mailt tud írni Önnek \\
+E-maileket spamként vagy nem spamként osztályoz & Teljesen új e-mailt tud írni neked \\
 \end{tabular}
 
 \section*{Három pillér, amely lehetővé tette}
