docs: update video transcript formatting to markdown

--- a/course/hu/pamphlets/4d-megkulonboztetes-reszletes.tex
+++ b/course/hu/pamphlets/4d-megkulonboztetes-reszletes.tex
@@ -222,7 +222,7 @@ A hatékony megkülönböztetés érdekében:
 \vfill
 \begin{center}
 \small
-Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.
+Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.\\A magyar nyelvű változatot készítette Rácz László és a NewPush Europe Kft.
 \end{center}
 
 \end{document}
