--- a/course/hu/pamphlets/mi-fluencia-kulcsfogalmak-csalolap.tex
+++ b/course/hu/pamphlets/mi-fluencia-kulcsfogalmak-csalolap.tex
@@ -272,7 +272,7 @@ Az a pont, amely után egy MI modellnek nincs beépített tudása a világról, 
 \vfill
 \begin{center}
 \small
-Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.
+Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.\\A magyar nyelvű változatot készítette Rácz László és a NewPush Europe Kft.
 \end{center}
 
 \end{document}
