--- a/course/hu/pamphlets/generativ-mi-megertese.tex
+++ b/course/hu/pamphlets/generativ-mi-megertese.tex
@@ -192,7 +192,7 @@ Példából való tanulás & Kontextusablak-korlát \\
 
 \vspace{\fill}
 \begin{center}
-    \small{Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.}
+    \small{Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.\\A magyar nyelvű változatot készítette Rácz László és a NewPush Europe Kft.}
 \end{center}
 
 \end{document}
