--- a/course/hu/pamphlets/mi-fluencia-keretrendszer-reszletes.tex
+++ b/course/hu/pamphlets/mi-fluencia-keretrendszer-reszletes.tex
@@ -198,7 +198,7 @@ Az emberek úgy konfigurálják az MI-t, hogy önállóan végezzen jövőbeli f
 \vfill
 \begin{center}
 \small
-Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.
+Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.\\A magyar nyelvű változatot készítette Rácz László és a NewPush Europe Kft.
 \end{center}
 
 \end{document}
