--- a/course/hu/pamphlets/mi-gondossag.tex
+++ b/course/hu/pamphlets/mi-gondossag.tex
@@ -136,7 +136,7 @@ Ez a nyilatkozat az MI Fluencia Keretrendszer által hirdetett átláthatóság 
 
 \vspace{\fill}
 \begin{center}
-    \small{Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.}
+    \small{Copyright 2025 Rick Dakan, Joseph Feller és Anthropic. Kiadva a CC BY-NC-SA 4.0 licenc alatt.\\A magyar nyelvű változatot készítette Rácz László és a NewPush Europe Kft.}
 \end{center}
 
 \end{document}
